[package]
name = "rusty-python"
version = "0.1.0"
authors = ["Davide Aversa <thek3nger@gmail.com>"]

# We add `libc` dependency because we need type definitions which are
# compatible with the C native format.
[dependencies]
libc = "0.2.0"

[lib]
name = "rustypython"
crate-type = ["dylib"]  # We need to specify this in order to compile this
                        # library in the standard binary format and NOT in the
                        # rust internal format. Remember: we need to use this
                        # library OUTSIDE of the Rust ecosystem.